qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
  annotations:
    metallb.universe.tf/allow-shared-ip: transmission
spec:
  type: LoadBalancer
  loadBalancerIP: 172.19.74.22
  ports:
  - name: qbittorrent-web
    port: 8080
    targetPort: 8080
  - name: bittorrent
    port: 51414
    targetPort: 51414
    protocol: TCP
  selector:
    app: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-udp
  labels:
    app: qbittorrent
  annotations:
    metallb.universe.tf/allow-shared-ip: transmission
spec:
  type: LoadBalancer
  loadBalancerIP: 172.19.74.22
  ports:
  - name: bittorrent
    port: 51414
    targetPort: 51414
    protocol: UDP
  selector:
    app: qbittorrent
